--- a/iris/package.json
+++ b/iris/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "iris",
+  "name": "tf",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@tensorflow/tfjs": "^1.2.11"
+    "@tensorflow/tfjs": "^1.5.1",
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
